gccida/g2/compute_forward_dependences
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1839:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1839:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1840:4: error: expected ';' after expression
rtx v4; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1840:5: error: use of undeclared identifier 'v4'
rtx v4; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1842:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1842:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1843:4: error: expected ';' after expression
rtx v7; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1843:5: error: use of undeclared identifier 'v7'
rtx v7; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1844:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1844:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1851:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = head; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1854:30: error: use of undeclared identifier 'nonnote_insn'
while ( rtx_class[*( _WORD *)nonnote_insn] != 105 ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1856:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = nonnote_insn[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1856:16: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = nonnote_insn[1].fld[0].rtx; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1857:13: error: use of undeclared identifier 'nonnote_insn'
if ( rtx == nonnote_insn ) 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1862:1: error: use of undeclared identifier 'v4'
v4 = nonnote_insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1862:6: error: use of undeclared identifier 'nonnote_insn'
v4 = nonnote_insn; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1863:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( nonnote_insn); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/sched-deps.c:1863:35: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = next_nonnote_insn( nonnote_insn); 
                                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_forward_dependences/src/obj/sched-deps.o] Error 1
